# hue-things

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/pixplicity/huethings/: GsonUtils.java  HueThingsApp.java  InputMonitor.java  MCP3008.java  MainActivity.java  UPnPDevice.java  UPnPDeviceFinder.java
app/src/main/java/com/pixplicity/huethings/dht/: Dhtxx.java  DhtxxHumidityAndTemperatureDriver.java
app/src/main/java/com/pixplicity/huethings/gpio/: InputMonitor.java  MCP3008.java
app/src/main/java/com/pixplicity/huethings/listeners/: OnLightsUpdated.java
app/src/main/java/com/pixplicity/huethings/models/: AuthRequest.java  AuthResponse.java  CapabilitiesResponse.java  ErrorResponse.java  LightRequest.java  LightResponse.java  LightsResponse.java
app/src/main/java/com/pixplicity/huethings/network/: AuthenticationCallback.java  CapabilitiesCallback.java  HueBridge.java  HueBridgeConnector.java  HueBridgeInterface.java  HueManager.java
app/src/main/java/com/pixplicity/huethings/sensors/: SensorCallback.java
app/src/main/java/com/pixplicity/huethings/services/: SensorDriverService.java
app/src/main/java/com/pixplicity/huethings/upnp/: UPnPDevice.java  UPnPDeviceFinder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
